# tdd-python-pytest

./: Makefile  Readme.md  pyproject.toml
src/: rekognition.py
tests/: test_rekognition.py
